--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,9 +32,9 @@ dependencies:
     sdk: flutter
   http: ^1.1.0          # for API calls to Django
   shared_preferences: ^2.2.0  # for saving JWT tokens locally
-  flutter_map: ^6.1.0
-  latlong2: ^0.9.0
   geolocator: ^11.0.0
+  flutter_map: ^8.2.2
+  latlong2: ^0.9.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -67,6 +67,10 @@ flutter:
       - assets/images/black_philippine_eagle.png
       - assets/images/philippine_eagle.jpg
       - assets/images/white_eagle_logo.png
+      - assets/images/50_discount.png
+      - assets/images/100_discount.png
+      - assets/images/trashbag.png
+      - assets/images/first_trash_badge.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
